# sbi_ns_injection

./: .gitignore  README.md  angr_test.ipynb  basic_test-dis.ll  basic_test.c  basic_test.dump  basic_test.ll  basic_test.s  basic_test2.s  basic_test_2.s  compile.sh  full_test.bc  full_test.ll  full_test.sh  latchup_compile.sh  new_test.ll  rodata_test.bc  rodata_test.ll  rodata_test.sh  temp  temp.c  test.bc  test.c  test.ll  test.sh  testbin  testbin-dis.ll  testbin.c  testbin.clang.ll  testbin.dump  testbin.mctoll  xbgas_compile.sh
benchmarks/: README.md  compile.sh  lift.sh  manager.ipynb  protect.sh
benchmarks/lifted/: convert_ptr_to_type  convert_ptr_to_typed.cpp  df_editing_size.ll  df_nonadjacent_free.ll  df_overwriting_free.ll  df_switch_statements.ll  df_with_oobw.ll  hbo_char_array.ll  hbo_struct_array.ll  hm_fake_chunk_malloc.ll  hm_house_of_spirit.ll  hm_parent_and_child_chunk.ll  ip_large_size.ll  oobr_char_to_int_conversion_advanced.ll  oobr_direct_index_integer.ll  oobr_direct_index_string.ll  oobr_do_while.ll  oobr_heap_underrread.ll  oobr_int_read.ll  oobr_less_or_equal_in_for_loop.ll  oobr_long_read.ll  oobr_negative_array_index.ll  oobr_off_by_one_mat.ll  oobr_off_by_one_mat_str.ll  oobr_overflow_into_adjacent_mem.ll  oobr_using_for_loop.ll  oobw_char_to_int_conversion_advanced.ll  oobw_char_to_int_conversion_basic.ll  oobw_direct_index_int_heap.ll  oobw_direct_index_integer.ll  oobw_direct_index_integer_long_write.ll  oobw_direct_index_string.ll  oobw_direct_index_string_heap.ll  oobw_direct_index_string_heap_long.ll  oobw_do_while.ll  oobw_edit_chunk_size.ll  oobw_int_write.ll  (+16 more)
heap_pass/: CMakeLists.txt  HeapPass.cpp
injection_pass/: CMakeCache.txt  CMakeLists.txt  Makefile  NSInjectionPass.cpp  cmake_install.cmake
ns_pass/: CMakeLists.txt
rodata_pass/: CMakeLists.txt  SplitRodataPass.cpp
(+82 files in other folders)
